visual bugfix on safari about the svg

--- a/src/components/Elements/Form/CreateListForm/classes.module.scss
+++ b/src/components/Elements/Form/CreateListForm/classes.module.scss
@@ -127,6 +127,10 @@
             background-color: #2a5293;
             color: #efefef;
             border-radius: 4px;
+
+            svg {
+              width: 100%;
+            }
           }
 
           .minus-icon {
