--- a/src/components/Materials/CustomSelector/classes.module.scss
+++ b/src/components/Materials/CustomSelector/classes.module.scss
@@ -86,6 +86,10 @@
           display: flex;
           max-width: 20px;
           width: 100%;
+
+          svg {
+            width: 100%;
+          }
         }
 
         .option-description {
